--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -826,6 +826,11 @@ a {
   .leaflet-control.leaflet-bar a {
     color: black;
   }
+  .leaflet-popup-content {
+    h3 {
+      margin-top: 0;
+    }
+  }
 }
 .vacancy_icon {
   text-align: center;
@@ -888,6 +893,15 @@ a {
   padding: $unit/3 $unit/2;
   box-sizing: border-box;
   border-radius: 2px;
+  a .mdc-list-item__graphic {
+    margin-right: $unit/2;
+  }
+  a:hover {
+    text-decoration: none;
+    .underline {
+      text-decoration: underline;
+    }
+  }
 }
 .goodmoves-organisation-search .search-info {
   margin-bottom: $unit*1.5;
