--- a/sites/configurations/goodmoves/partials/search-info.hbs
+++ b/sites/configurations/goodmoves/partials/search-info.hbs
@@ -2,6 +2,10 @@
 <div class="search-info mdc-elevation--z3">
   <strong>Total results:</strong> {{addCommas paging.totalResults}} |
   <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
+  <a href="/map{{@root.request.url.search}}" class="pull-right">
+    <span class="far fa-map-marker-alt fa-fw mdc-list-item__graphic" title="Map"></span>
+    <span class="underline">View results on map</a>
+  </a>
 </div>
 {{else}}
 {{#ifAny @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.statuses @root.request.params.query.location @root.request.params.query.job_number @root.request.params.query.q ~}}
