--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -223,6 +223,7 @@ header {
       }
       #user-menu {
         top: $header-lower-height !important;
+        left: $unit/2;
         border-radius: 0 0 2px 2px;
       }
       .mdc-top-app-bar__action-item::before,
