--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1261,7 +1261,7 @@ hr {
   padding: $unit 0 $unit*2;
 }
 .mdc-drawer__content {
-  padding: 0 $unit/2;
+  padding: 0 $unit/2 $unit;
   #search-tab-bar {
     padding: 0 $unit/2;
     box-sizing: border-box;
@@ -1404,6 +1404,9 @@ body.shortlist {
 }
 
 #search-terms {
+  .mdc-chip {
+    padding: $unit/4 $unit*.6 $unit/4 $unit/5;
+  }
   .mdc-chip,
   .mdc-chip:hover {
     .mdc-chip__icon,
@@ -1681,6 +1684,7 @@ body {
   }
   .search-distance {
     font-variant: all-small-caps;
+    font-size: 0.9rem;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.7);
   }
@@ -1782,7 +1786,8 @@ body {
 }
 
 footer,
-.browse main {
+.browse main,
+.home-browse {
   .mdc-list {
     .mdc-list-item--0 .mdc-typography--headline7 {
       margin-top: 0;
@@ -1800,6 +1805,7 @@ footer,
       }
       .mdc-list-item__meta {
         text-decoration: none;
+        white-space: nowrap;
       }
     }
     .mdc-list-item:hover::before,
@@ -1992,6 +1998,7 @@ footer,
     padding-left: $unit*(3/4);
   }
 }
+.home-browse,
 .browse main {
   .browse-title {
     margin: $unit/2 0 $unit/2;
@@ -2000,9 +2007,22 @@ footer,
     height: auto;
   }
 }
+.home-browse {
+  .mdc-icon-toggle {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: $unit/2;
+    .far {
+      vertical-align: top;
+    }
+  }
+  .page-content {
+    padding: 0;
+  }
+}
 
 .home-heading {
-  padding: $unit $unit*1.5;
+  padding: 0 $unit*1.5;
   .mdc-typography--headline5 {
     margin: $unit/2 0 0;
   }
@@ -2456,12 +2476,12 @@ form.inline-form {
   }
 }
 .scroll-button {
-  position: absolute;
-  height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   align-self: center;
   justify-content: center;
+  position: absolute;
+  height: 100%;
   width: $unit*4;
   border-radius: $unit/4;
   z-index: 2;
