--- a/sites/configurations/goodmoves/templates/pages/browse.hbs
+++ b/sites/configurations/goodmoves/templates/pages/browse.hbs
@@ -1,100 +1,4 @@
 <div class="container-fluid">
-  <div class="mdc-layout-grid home-jobs">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Roles
-        </div>
-        <ul class="mdc-list">
-          {{#each @root.data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
-            {{#if key ~}}
-              <a class="mdc-list-item" href="/search?roles%5B%5D={{urlencode key}}" role="menuitem">
-                <span class="mdc-list-item__text">
-                  {{#with (lookup @root.data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
-                    {{{key}}}
-                  {{/with ~}}
-                </span>
-                <span class="mdc-list-item__meta">
-                  {{doc_count}}
-                </span>
-              </a>
-            {{/if ~}}
-          {{/each ~}}
-        </ul>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Sectors
-        </div>
-        <ul class="mdc-list">
-          {{#each @root.data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
-            {{#if key ~}}
-              <a class="mdc-list-item" href="/search?sectors%5B%5D={{urlencode key}}" role="menuitem">
-                <span class="mdc-list-item__text">
-                  {{#with (lookup @root.data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
-                    {{{key}}}
-                  {{/with ~}}
-                </span>
-                <span class="mdc-list-item__meta">
-                  {{doc_count}}
-                </span>
-              </a>
-            {{/if ~}}
-          {{/each ~}}
-        </ul>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Working patterns
-        </div>
-        <ul class="mdc-list">
-          {{#each @root.data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-            {{#if key ~}}
-              <a class="mdc-list-item" href="/search?statuses%5B%5D={{urlencode key}}" role="menuitem">
-                <span class="mdc-list-item__text">
-                  {{#with (lookup @root.data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
-                    {{{key}}}
-                  {{/with ~}}
-                </span>
-                <span class="mdc-list-item__meta">
-                  {{doc_count}}
-                </span>
-              </a>
-            {{/if ~}}
-          {{/each ~}}
-        </ul>
-
-        <div class="browse-title mdc-typography--headline5">
-          Regions
-        </div>
-        <ul class="mdc-list">
-          {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
-            {{#if key ~}}
-            {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
-              <li class="mdc-list-item mdc-list-item--{{@index}}">
-                <h3 class="mdc-typography--headline7">{{{key}}}</h3>
-              </li>
-              {{/compare ~}}
-            {{/if ~}}
-            {{#each this.regions_slugs.buckets ~}}
-              {{#if key ~}}
-                <a class="mdc-list-item" href="/search?regions%5B%5D={{urlencode key}}" role="menuitem">
-                  <span class="mdc-list-item__text">
-                    {{#with (lookup ../regions.buckets @index) ~}}
-                      {{{key}}}
-                    {{/with ~}}
-                  </span>
-                  <span class="mdc-list-item__meta">
-                    {{doc_count}}
-                  </span>
-                </a>
-              {{/if ~}}
-            {{/each ~}}
-          {{/each ~}}
-        </ul>
-      </div>
-    </div>
-  </div>
-
+  {{> browse}}
   {{> currently_recruiting}}
 </div>
