--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -76,17 +76,33 @@
             </div>
           </div>
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
+            <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone"> -->
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div id="search-terms" class="mdc-chip-set"></div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+            <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="extra-options">
                 <a href="/browse">Browse</a><span class="noselect"> | </span><a href="/search">Advanced</a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </form>
+    </div>
+  </div>
+
+  <div class="home-browse h-padding">
+    <h3 class="mdc-drawer__content-heading cursor-pointer h-padding-full" data-collapse-target="#home-browse-collapse" role="button" aria-pressed="false" aria-label="Show browse section" tabindex="0">
+      Browse
+      <span class="mdc-icon-toggle">
+        <span class="far fa-chevron-down" aria-hidden="true"></span>
+      </span>
+      <span class="mdc-typography--body2">
+        By role, sector, working pattern, or region
+      </span>
+    </h3>
+    <div id="home-browse-collapse" style="display: none;">
+      {{> browse}}
     </div>
   </div>
 
