--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -149,7 +149,7 @@ if(location.host.indexOf('.local') > -1){
               </nav>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__user">
-              {{#if data.auth ~}}
+              {{#if @root.data.auth ~}}
               <div class="mdc-menu-anchor">
                 <button class="mdc-button" data-menu-target="#user-menu">
                   {{#if data.auth.photoURL ~}}
