--- a/sites/configurations/scvo/templates/events/event-policy-search-head-tags.hbs
+++ b/sites/configurations/scvo/templates/events/event-policy-search-head-tags.hbs
@@ -1,5 +1,5 @@
-{{#if data.primaryResponse.hits.hits.[0] ~}}
-{{#with data.primaryResponse.hits.hits.[0]._source ~}}
+{{#if @root.data.primaryResponse.hits.hits.[0] ~}}
+{{#with @root.data.primaryResponse.hits.hits.[0]._source ~}}
 <title>SCVO – Policy events search</title>
 <meta property="og:title" content="SCVO – Policy events search" data-dynamic="true">
 {{#ifAny og_image ../og_image}}
