--- a/sites/configurations/scvo/templates/funding/funding-updates.hbs
+++ b/sites/configurations/scvo/templates/funding/funding-updates.hbs
@@ -4,7 +4,7 @@
       <div class="container-fluid">
         <div class="mdc-layout-grid">
           {{#if @root.data.primaryResponse.hits.hits.[0]._source.header_text ~}}
-          <img src="{{data.primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{@root.data.primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+          <img src="{{@root.data.primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{@root.data.primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
           {{else}}
           <h1 class="header-text">
             <span class="header-text-banner">
