--- a/sites/configurations/scvo/templates/grants/grant-cyber.hbs
+++ b/sites/configurations/scvo/templates/grants/grant-cyber.hbs
@@ -7,12 +7,12 @@
       <li><a href="/digital/evolution">Evolution</a></li>
       <li><a href="/digital/evolution/cyber-resilience">Cyber Resilience and Cyber Essentials Grants</a></li>
       <li><a href="/digital/evolution/cyber-resilience/projects">Projects</a></li>
-      <li>{{{data.primaryResponse.hits.hits.[0]._source.title}}}</li>
+      <li>{{{@root.data.primaryResponse.hits.hits.[0]._source.title}}}</li>
     </ul>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content grant-content">
-          {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+          {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
       </div>
     </div>
