--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-phase.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-phase.hbs
@@ -16,9 +16,11 @@
           <p>
             CJS is targeted at more vulnerable young people and in particular, is focused on groups of young people who are more disadvantaged in the labour market.
           </p>
+          {{#if @root.data.auth ~}}
           <p>
             If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/sign-in">sign in</a>.
           </p>
+          {{/if ~}}
           <p>
             Start your search using the following links.
           </p>
