--- a/sites/configurations/scvo/templates/funding/funding-updates-head-tags.hbs
+++ b/sites/configurations/scvo/templates/funding/funding-updates-head-tags.hbs
@@ -1,5 +1,5 @@
-{{#if data.primaryResponse.hits.hits.[0] ~}}
-{{#with data.primaryResponse.hits.hits.[0]._source ~}}
+{{#if @root.data.primaryResponse.hits.hits.[0] ~}}
+{{#with @root.data.primaryResponse.hits.hits.[0]._source ~}}
 <title>SCVO – Funding update – {{momentFormat (moment (lastItem (split (atob ../request.params.range) "-")) "x") "Do MMMM YYYY"}}</title>
 <meta property="og:title" content="SCVO – Funding update – {{momentFormat (moment (lastItem (split (atob ../request.params.range) "-")) "x") "Do MMMM YYYY"}}" data-dynamic="true">
 {{#ifAny og_image ../og_image ~}}
