--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -4723,6 +4723,7 @@ button.swiper-pagination-bullet {
   .mdc-toolbar-fixed-adjust {
     padding: 0;
   }
+  .apply-button,
   .print-button,
   .sidebar,
   .related,
