--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy.hbs
@@ -6,13 +6,13 @@
       <li><a href="/jobs">Jobs</a></li>
       <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
       <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
-      <li><a href="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}">{{#compare request.params.phase "===" "p19v"}}16–29 year olds{{else}}16–29 year olds with a disability{{/compare}}</a></li>
-      <li>{{data.primaryResponse.hits.hits.[0]._source.title}}</li>
+      <li><a href="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}">{{#compare @root.request.params.phase "===" "p19v"}}16–29 year olds{{else}}16–29 year olds with a disability{{/compare}}</a></li>
+      <li>{{@root.data.primaryResponse.hits.hits.[0]._source.title}}</li>
     </ul>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-          {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+          {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
           {{> sidebar_cjs_search}}
