--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -223,7 +223,8 @@ header {
       }
       #user-menu {
         top: $header-lower-height !important;
-        left: $unit/2 !important;
+        left: auto !important;
+        right: $unit/4 !important;
         border-radius: 0 0 2px 2px;
       }
       .mdc-top-app-bar__action-item::before,
