Home-based jobs

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -860,6 +860,7 @@ a {
   .marker-icon.shortlisted {
     color: $mdc-theme-primary-dark;
   }
+  .map-marker-overlay.homebased,
   .map-marker-overlay.shortlisted {
     color: white;
     background: $mdc-theme-primary-dark;
@@ -869,6 +870,12 @@ a {
     height: 22px;
     width: 22px;
     line-height: 24px;
+  }
+  .marker-icon.homebased {
+    color: $mdc-theme-primary-light;
+  }
+  .map-marker-overlay.homebased {
+    background: $mdc-theme-primary;
   }
 }
 
