--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -1,3 +1,4 @@
+@import "./node_modules/material-components-web/material-components-web.scss";
 @import url("//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css");
 @import url('//fonts.googleapis.com/css?family=Open+Sans:400,600');
 
