Styling and MDC fixes

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -180,7 +180,7 @@ a {
   width: 95%;
   margin: 0 auto;
   overflow: auto;
-  overflow: -webkit-paged-x;
+  // overflow: -webkit-paged-x;
   padding: $unit/2 0;
 }
 .mdc-toolbar {
