Wee styling fixes

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -159,6 +159,7 @@ main {
 }
 .mdc-list-item {
   direction: ltr;
+  padding: 0;
 }
 main {
   padding-bottom: $unit;
@@ -179,7 +180,7 @@ a {
   max-width: 1280px;
   width: 95%;
   margin: 0 auto;
-  overflow: auto;
+  overflow: hidden;
   // overflow: -webkit-paged-x;
   padding: $unit/2 0;
 }
