--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -66,6 +66,7 @@ header.mdc-toolbar {
 }
 .mdc-list-item {
   direction: ltr;
+  padding: 0;
 }
 .cookieinfo {
   box-shadow: $toolbar-shadow-reverse;
@@ -184,7 +185,7 @@ a:hover {
   max-width: 1280px;
   width: 95%;
   margin: 0 auto;
-  overflow: auto;
+  overflow: hidden;
   // overflow: -webkit-paged-x;
   padding: $unit 0;
 }
