--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -70,6 +70,7 @@ main {
 
 .mdc-list-item {
   direction: ltr;
+  padding: 0;
 }
 .cookieinfo {
   box-shadow: $toolbar-shadow-reverse;
@@ -192,7 +193,7 @@ a:hover {
   max-width: 1280px;
   width: 95%;
   margin: 0 auto;
-  overflow: auto;
+  overflow: hidden;
   // overflow: -webkit-paged-x;
   padding: $unit 0;
 }
