--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -63,6 +63,7 @@ main {
 }
 .mdc-list-item {
   direction: ltr;
+  padding: 0;
 }
 .cookieinfo {
   box-shadow: $toolbar-shadow-reverse;
@@ -203,7 +204,7 @@ a:hover {
   max-width: 1280px;
   width: 95%;
   margin: 0 auto;
-  overflow: auto;
+  overflow: hidden;
   // overflow: -webkit-paged-x;
   padding: $unit 0;
 }
