--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -250,6 +250,11 @@ a:hover {
           opacity: 1;
           text-decoration: none;
         }
+        .mdc-tab:not(.mdc-ripple-upgraded):active::after,
+        .mdc-tab:not(.mdc-ripple-upgraded):focus::before, .mdc-tab.mdc-ripple-upgraded--background-focused::before,
+        .mdc-tab:hover::before {
+          opacity: 0;
+        }
       }
     }
   }
@@ -263,6 +268,20 @@ a:hover {
   img {
     max-width: 100%;
   }
+}
+
+.mdc-list-item--header:focus::before,
+.mdc-list-item--header:focus::after,
+.mdc-list-item--header:hover::before,
+.mdc-list-item--header:hover::after,
+.mdc-tab:active::before,
+.mdc-tab:focus::before,
+.mdc-tab:hover::before,
+.mdc-button:not(.mdc-ripple-upgraded):active:after,
+.mdc-button:not(.mdc-ripple-upgraded):focus:before,
+.mdc-button:not(.mdc-ripple-upgraded):hover:before {
+  opacity: 0;
+  background-color: transparent;
 }
 
 .hide-lg {
